===============
TNRS 0.2.0
===============

## NEW FEATURES
* Added Spanish language vignette

## Bug fixes
* Fixed error in naming metadata elements
* A server upgrade rendered RCurl incompatible with our api, so we switched to httr
* Modified functions to fail gracefully if the internet or API are unavailabile

===============
TNRS 0.1.0
===============

## NEW FEATURES

* released to CRAN