@@ -2,12 +2,13 @@
 #'
 #'Resolve plant taxonomic names.
 #' @param taxonomic_names Data.frame containing two columns: 1) Row number, 2) Taxonomic names to be resolved (or parsed).  Alternatively, a character vector of names can be supplied.  
-#' @param sources Character. Taxonomic sources to use. Default is "tpl,tropicos,usda". Options include tpl,tropicos,usda,ncbi
-#' @param classification Character. Family classification to use. Currently the only options is "tropicos", which is equivalent to APGIII.
+#' @param sources Character vector. Taxonomic sources to use. Default is c("tropicos","wcvp"). Options include "tropicos", "usda", "wfo", and "wcvp".
+#' @param classification Character. Family classification to use. Currently options include "tropicos" (the default), which is equivalent to APGIII, and "wfo".
 #' @param mode Character.  Options are "resolve" and "parse". Default option is "resolve"
 #' @param matches Character. Should all matches be returned ("all") or only the best match ("best", the default)?
 #' @param accuracy numeric.  If specified, only matches with a score greater than or equal to the supplied accuracy level will be returned. If left NULL, the default threshold will be used.
 #' @return Dataframe containing TNRS results.
+#' @note usda = United States Department of Agriculture, wfo = World Flora Online, wcvp = World Checklist of Vascular Plants.
 #' @export
 #' @examples {
 #' #Take a subset of the testfile to speed up runtime                  
@@ -20,11 +21,11 @@
 #' }
 #' 
 TNRS <- function(taxonomic_names,
-                      sources = "tpl,tropicos,usda",
+                      sources = c("tropicos","wcvp"),
                       classification = "tropicos",
                       mode = "resolve",
                       matches = "best",
-                      accuracy = "NUll"
+                      accuracy = NULL
 ){
   
   # Check for internet access
@@ -35,13 +36,48 @@ TNRS <- function(taxonomic_names,
   
   #If taxonomic names are supplied as a character string, make them into a data.frame
   
-  if(class(taxonomic_names)=="character"){
+  if(class(taxonomic_names) == "character"){
     taxonomic_names <- as.data.frame(cbind(1:length(taxonomic_names),taxonomic_names))
   }
   
   
   #Specify the limit of names for the TNRS
-  name_limit=1000
+  name_limit <- 1000
+  
+  #Check that accuracy makes sense
+  
+  if(!class(accuracy) %in% c("NULL", "numeric")) {
+    stop("accuracy should be either numeric between 0 and 1, or NULL")
+  }
+  
+  #Check that sources are valid
+  if(!all(sources %in% c("tropicos", "usda", "wfo","wcvp"))) {
+    message("Invalid source(s) specified. Current options are: tropicos, usda, wfo, wcvp ")
+    return(invisible(NULL))
+  }
+  
+  
+  #Check that classification is valid
+  if(length(classification) != 1 | !classification %in% c("tropicos","wfo")    ) {
+    message("Invalid classification specified. Current options are: tropicos, wfo ")
+    return(invisible(NULL))
+  }
+  
+  #Check that mode is valid
+  if(length(mode) != 1 | !mode %in% c("resolve", "parse")    ) {
+    message("Invalid mode specified. Current options are: resolve, parse ")
+    return(invisible(NULL))
+  }
+  
+  #Check that matches is valid
+  if(length(matches) != 1 | !matches %in% c("best", "all")    ) {
+    message("Invalid mode specified. Current options are: best, all ")
+    return(invisible(NULL))
+  }
+  
+  #reformat sources to match API input
+  sources <- paste0(sources, collapse = ",")
+  
   
   
   # If there are less than the max number of names allowable, send them to the base package 
@@ -51,7 +87,8 @@ TNRS <- function(taxonomic_names,
                             sources = sources,
                             classification = classification,
                             mode = mode,
-                            matches = matches ))
+                            matches = matches,
+                            accuracy = accuracy ))
           
         }#
   
@@ -72,7 +109,8 @@ TNRS <- function(taxonomic_names,
                            sources = sources,
                            classification = classification,
                            mode = mode,
-                           matches=matches)
+                           matches = matches,
+                           accuracy = accuracy)
                 
             #results<-matrix(nrow = nrow(taxonomic_names),ncol = ncol(results_i))
             #$results <- as.data.frame(results,stringsAsFactors = F)
@@ -93,7 +131,8 @@ TNRS <- function(taxonomic_names,
                                                                      sources = sources,
                                                                      classification = classification,
                                                                      mode = mode,
-                                                                     matches = matches)
+                                                                     matches = matches,
+                                                                     accuracy = accuracy)
                         )
         
         
@@ -110,7 +149,8 @@ TNRS <- function(taxonomic_names,
                                                                        sources = sources,
                                                                        classification = classification,
                                                                        mode = mode,
-                                                                       matches = matches)
+                                                                       matches = matches,
+                                                                       accuracy = accuracy)
           )
           
       
