@@ -2,24 +2,31 @@
 #'
 #'Resolve a small batch of plant taxonomic names
 #' @param taxonomic_names Data.frame containing two columns: 1) Row number, 2) Taxonomic names to be resolved (or parsed).  Alternatively, a character vector of names can be supplied.  
-#' @param sources Character. Taxonomic sources to use. Default is "tpl,tropicos,usda". Options include tpl,tropicos,usda,ncbi
-#' @param classification Character. Family classification to use. Currently the only options is "tropicos", which is equivalent to APGIII.
+#' @param sources Character. Taxonomic sources to use. Default is c("tropicos","wcvp"). Options include "tropicos", "usda", "wfo", and "wcvp".
+#' @param classification Character. Family classification to use. Currently options include "tropicos" (the default), which is equivalent to APGIII, and "wfo".
 #' @param mode Character.  Options are "resolve" and "parse". Default option is "resolve"
 #' @param matches Character. Should all matches be returned ("all") or only the best match ("best", the default)?
 #' @param accuracy numeric.  If specified, only matches with a score greater than or equal to the supplied accuracy level will be returned.
 #' @return Dataframe containing TNRS results.
 #' @note This function is primarily used as an internal function of TNRS and can only handle relatively small batches of names. 
+#' @note usda = United States Department of Agriculture, wfo = World Flora Online, wcvp = World Checklist of Vascular Plants.
 #' @import httr
 #' @importFrom jsonlite toJSON fromJSON
 #' @keywords Internal
 #' 
 .TNRS_base <- function(taxonomic_names,
-                       sources = "tpl,tropicos,usda",
+                       sources = c("tropicos","wcvp"),
                        classification = "tropicos",
                        mode = "resolve",
                        matches = "best",
                        accuracy = NULL
 ){
+  
+  #reformat sources if need  be (only likely when using internal function externally)
+  if(length(sources)>1) {
+    sources <- paste0(sources, collapse = ",")
+  }
+  
   
   # Check for internet access
   if (!check_internet()) {
@@ -29,8 +36,8 @@
 
   # URL for TNRS API
   #url = "https://tnrsapidev.xyz/tnrs_api.php"
-  #url = "http://vegbiendev.nceas.ucsb.edu:8975/tnrs_api.php" # Dev (vegbiendev)
-  url = "https://tnrsapi.xyz/tnrs_api.php" #production
+  url = "http://vegbiendev.nceas.ucsb.edu:8975/tnrs_api.php" # Dev (vegbiendev)
+  #url = "https://tnrsapi.xyz/tnrs_api.php" #production
 
   
   # If taxonomic names are supplied as a character string, make them into a data.frame
