@@ -3,6 +3,8 @@ context("tnrs citations")
 
 test_that("example works", {
 
+  skip_if_offline(host = "r-project.org")  
+  
   sources <- TNRS_sources()
   
   expect_equal(object = class(sources), expected = "data.frame")
